// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignIn view should render correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#1800AE",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 5,
        "justifyContent": "space-between",
        "paddingBottom": 10,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "gap": 5,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 31,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Criar Agendamento
      </Text>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "gap": 5,
            },
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 5,
              "opacity": 1,
            }
          }
        >
          <BackIconSVG />
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#FFFFFF",
                "fontSize": 27,
              }
            }
          >
            Voltar
          </Text>
        </View>
        <Image
          source={
            {
              "testUri": "../../../src/assets/logo-icon-conexa.png",
            }
          }
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
  <RCTScrollView
    keyboardShouldPersistTaps="always"
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#1800AE",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <RCTSafeAreaView
          style={
            {
              "backgroundColor": "#1800AE",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#DDDEDF",
                "fontSize": 31,
                "fontWeight": "bold",
                "marginTop": 15,
                "textAlign": "center",
              }
            }
          >
            Agendamento para 
            John Doe
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "center",
                "marginTop": 30,
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "gap": 8,
                  "justifyContent": "center",
                  "paddingBottom": 24,
                  "paddingLeft": 24,
                  "paddingRight": 24,
                  "paddingTop": 24,
                  "width": "90%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#5C6265",
                    "fontSize": 31,
                    "fontWeight": "bold",
                    "marginBottom": 20,
                  }
                }
              >
                Dados do Paciente
              </Text>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      Nome do Paciente
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="words"
                      autoCorrect={false}
                      onChangeText={[Function]}
                      placeholder="jose@gmail.com"
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          undefined,
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "marginBottom": 8,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "borderBottomLeftRadius": 5,
                          "borderBottomRightRadius": 5,
                          "borderColor": "#DDDEDF",
                          "borderStyle": "solid",
                          "borderTopLeftRadius": 5,
                          "borderTopRightRadius": 5,
                          "borderWidth": 1,
                          "justifyContent": "center",
                          "paddingBottom": 10,
                          "paddingLeft": 14,
                          "paddingRight": 14,
                          "paddingTop": 10,
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#FFFFFF",
                            "left": 10,
                            "paddingBottom": 0,
                            "paddingLeft": 5,
                            "paddingRight": 5,
                            "paddingTop": 0,
                            "position": "absolute",
                            "top": -10,
                            "zIndex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#5C6265",
                            }
                          }
                        >
                          Data
                        </Text>
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 5,
                            "justifyContent": "center",
                            "width": "100%",
                          }
                        }
                      >
                        <TextInput
                          autoCapitalize="none"
                          onChangeText={[Function]}
                          placeholder="Ex.: 10/12/2023"
                          style={
                            [
                              {
                                "fontSize": 27,
                                "width": "100%",
                              },
                              undefined,
                              {
                                "flex": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "marginBottom": 8,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "borderBottomLeftRadius": 5,
                          "borderBottomRightRadius": 5,
                          "borderColor": "#DDDEDF",
                          "borderStyle": "solid",
                          "borderTopLeftRadius": 5,
                          "borderTopRightRadius": 5,
                          "borderWidth": 1,
                          "justifyContent": "center",
                          "paddingBottom": 10,
                          "paddingLeft": 14,
                          "paddingRight": 14,
                          "paddingTop": 10,
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#FFFFFF",
                            "left": 10,
                            "paddingBottom": 0,
                            "paddingLeft": 5,
                            "paddingRight": 5,
                            "paddingTop": 0,
                            "position": "absolute",
                            "top": -10,
                            "zIndex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#5C6265",
                            }
                          }
                        >
                          Hora
                        </Text>
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 5,
                            "justifyContent": "center",
                            "width": "100%",
                          }
                        }
                      >
                        <TextInput
                          autoCapitalize="none"
                          onChangeText={[Function]}
                          placeholder="Ex.: 12:30"
                          style={
                            [
                              {
                                "fontSize": 27,
                                "width": "100%",
                              },
                              undefined,
                              {
                                "flex": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      Observações
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="sentences"
                      autoCorrect={false}
                      multiline={true}
                      onChangeText={[Function]}
                      placeholder="Digite aqui as observações do paciente."
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          {
                            "minHeight": 50,
                          },
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={false}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 5,
                    "borderBottomRightRadius": 5,
                    "borderColor": "#1800AE",
                    "borderStyle": "solid",
                    "borderTopLeftRadius": 5,
                    "borderTopRightRadius": 5,
                    "borderWidth": 1,
                    "marginTop": 10,
                    "opacity": 1,
                    "paddingBottom": 10,
                    "paddingLeft": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                    "width": "100%",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#1800AE",
                      "fontSize": 31,
                      "fontWeight": "bold",
                    }
                  }
                  variant="outline"
                >
                  Agendar
                </Text>
              </View>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`SignIn view should render correctly with date 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#1800AE",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 5,
        "justifyContent": "space-between",
        "paddingBottom": 10,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "gap": 5,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 31,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Criar Agendamento
      </Text>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "gap": 5,
            },
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 5,
              "opacity": 1,
            }
          }
        >
          <BackIconSVG />
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#FFFFFF",
                "fontSize": 27,
              }
            }
          >
            Voltar
          </Text>
        </View>
        <Image
          source={
            {
              "testUri": "../../../src/assets/logo-icon-conexa.png",
            }
          }
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
  <RCTScrollView
    keyboardShouldPersistTaps="always"
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#1800AE",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <RCTSafeAreaView
          style={
            {
              "backgroundColor": "#1800AE",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#DDDEDF",
                "fontSize": 31,
                "fontWeight": "bold",
                "marginTop": 15,
                "textAlign": "center",
              }
            }
          >
            Agendamento para 
            John Doe
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "center",
                "marginTop": 30,
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "gap": 8,
                  "justifyContent": "center",
                  "paddingBottom": 24,
                  "paddingLeft": 24,
                  "paddingRight": 24,
                  "paddingTop": 24,
                  "width": "90%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#5C6265",
                    "fontSize": 31,
                    "fontWeight": "bold",
                    "marginBottom": 20,
                  }
                }
              >
                Dados do Paciente
              </Text>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      Nome do Paciente
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="words"
                      autoCorrect={false}
                      onChangeText={[Function]}
                      placeholder="jose@gmail.com"
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          undefined,
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "marginBottom": 8,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "borderBottomLeftRadius": 5,
                          "borderBottomRightRadius": 5,
                          "borderColor": "#DDDEDF",
                          "borderStyle": "solid",
                          "borderTopLeftRadius": 5,
                          "borderTopRightRadius": 5,
                          "borderWidth": 1,
                          "justifyContent": "center",
                          "paddingBottom": 10,
                          "paddingLeft": 14,
                          "paddingRight": 14,
                          "paddingTop": 10,
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#FFFFFF",
                            "left": 10,
                            "paddingBottom": 0,
                            "paddingLeft": 5,
                            "paddingRight": 5,
                            "paddingTop": 0,
                            "position": "absolute",
                            "top": -10,
                            "zIndex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#5C6265",
                            }
                          }
                        >
                          Data
                        </Text>
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 5,
                            "justifyContent": "center",
                            "width": "100%",
                          }
                        }
                      >
                        <TextInput
                          autoCapitalize="none"
                          onChangeText={[Function]}
                          placeholder="Ex.: 10/12/2023"
                          style={
                            [
                              {
                                "fontSize": 27,
                                "width": "100%",
                              },
                              undefined,
                              {
                                "flex": 1,
                              },
                            ]
                          }
                          value="10/10/2030"
                        />
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "marginBottom": 8,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "borderBottomLeftRadius": 5,
                          "borderBottomRightRadius": 5,
                          "borderColor": "#DDDEDF",
                          "borderStyle": "solid",
                          "borderTopLeftRadius": 5,
                          "borderTopRightRadius": 5,
                          "borderWidth": 1,
                          "justifyContent": "center",
                          "paddingBottom": 10,
                          "paddingLeft": 14,
                          "paddingRight": 14,
                          "paddingTop": 10,
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#FFFFFF",
                            "left": 10,
                            "paddingBottom": 0,
                            "paddingLeft": 5,
                            "paddingRight": 5,
                            "paddingTop": 0,
                            "position": "absolute",
                            "top": -10,
                            "zIndex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#5C6265",
                            }
                          }
                        >
                          Hora
                        </Text>
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 5,
                            "justifyContent": "center",
                            "width": "100%",
                          }
                        }
                      >
                        <TextInput
                          autoCapitalize="none"
                          onChangeText={[Function]}
                          placeholder="Ex.: 12:30"
                          style={
                            [
                              {
                                "fontSize": 27,
                                "width": "100%",
                              },
                              undefined,
                              {
                                "flex": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      Observações
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="sentences"
                      autoCorrect={false}
                      multiline={true}
                      onChangeText={[Function]}
                      placeholder="Digite aqui as observações do paciente."
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          {
                            "minHeight": 50,
                          },
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={false}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 5,
                    "borderBottomRightRadius": 5,
                    "borderColor": "#1800AE",
                    "borderStyle": "solid",
                    "borderTopLeftRadius": 5,
                    "borderTopRightRadius": 5,
                    "borderWidth": 1,
                    "marginTop": 10,
                    "opacity": 1,
                    "paddingBottom": 10,
                    "paddingLeft": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                    "width": "100%",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#1800AE",
                      "fontSize": 31,
                      "fontWeight": "bold",
                    }
                  }
                  variant="outline"
                >
                  Agendar
                </Text>
              </View>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`SignIn view should render correctly with description 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#1800AE",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 5,
        "justifyContent": "space-between",
        "paddingBottom": 10,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "gap": 5,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 31,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Criar Agendamento
      </Text>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "gap": 5,
            },
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 5,
              "opacity": 1,
            }
          }
        >
          <BackIconSVG />
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#FFFFFF",
                "fontSize": 27,
              }
            }
          >
            Voltar
          </Text>
        </View>
        <Image
          source={
            {
              "testUri": "../../../src/assets/logo-icon-conexa.png",
            }
          }
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
  <RCTScrollView
    keyboardShouldPersistTaps="always"
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#1800AE",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <RCTSafeAreaView
          style={
            {
              "backgroundColor": "#1800AE",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#DDDEDF",
                "fontSize": 31,
                "fontWeight": "bold",
                "marginTop": 15,
                "textAlign": "center",
              }
            }
          >
            Agendamento para 
            John Doe
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "center",
                "marginTop": 30,
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "gap": 8,
                  "justifyContent": "center",
                  "paddingBottom": 24,
                  "paddingLeft": 24,
                  "paddingRight": 24,
                  "paddingTop": 24,
                  "width": "90%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#5C6265",
                    "fontSize": 31,
                    "fontWeight": "bold",
                    "marginBottom": 20,
                  }
                }
              >
                Dados do Paciente
              </Text>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      Nome do Paciente
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="words"
                      autoCorrect={false}
                      onChangeText={[Function]}
                      placeholder="jose@gmail.com"
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          undefined,
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "marginBottom": 8,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "borderBottomLeftRadius": 5,
                          "borderBottomRightRadius": 5,
                          "borderColor": "#DDDEDF",
                          "borderStyle": "solid",
                          "borderTopLeftRadius": 5,
                          "borderTopRightRadius": 5,
                          "borderWidth": 1,
                          "justifyContent": "center",
                          "paddingBottom": 10,
                          "paddingLeft": 14,
                          "paddingRight": 14,
                          "paddingTop": 10,
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#FFFFFF",
                            "left": 10,
                            "paddingBottom": 0,
                            "paddingLeft": 5,
                            "paddingRight": 5,
                            "paddingTop": 0,
                            "position": "absolute",
                            "top": -10,
                            "zIndex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#5C6265",
                            }
                          }
                        >
                          Data
                        </Text>
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 5,
                            "justifyContent": "center",
                            "width": "100%",
                          }
                        }
                      >
                        <TextInput
                          autoCapitalize="none"
                          onChangeText={[Function]}
                          placeholder="Ex.: 10/12/2023"
                          style={
                            [
                              {
                                "fontSize": 27,
                                "width": "100%",
                              },
                              undefined,
                              {
                                "flex": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "marginBottom": 8,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "borderBottomLeftRadius": 5,
                          "borderBottomRightRadius": 5,
                          "borderColor": "#DDDEDF",
                          "borderStyle": "solid",
                          "borderTopLeftRadius": 5,
                          "borderTopRightRadius": 5,
                          "borderWidth": 1,
                          "justifyContent": "center",
                          "paddingBottom": 10,
                          "paddingLeft": 14,
                          "paddingRight": 14,
                          "paddingTop": 10,
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#FFFFFF",
                            "left": 10,
                            "paddingBottom": 0,
                            "paddingLeft": 5,
                            "paddingRight": 5,
                            "paddingTop": 0,
                            "position": "absolute",
                            "top": -10,
                            "zIndex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#5C6265",
                            }
                          }
                        >
                          Hora
                        </Text>
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 5,
                            "justifyContent": "center",
                            "width": "100%",
                          }
                        }
                      >
                        <TextInput
                          autoCapitalize="none"
                          onChangeText={[Function]}
                          placeholder="Ex.: 12:30"
                          style={
                            [
                              {
                                "fontSize": 27,
                                "width": "100%",
                              },
                              undefined,
                              {
                                "flex": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      Observações
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="sentences"
                      autoCorrect={false}
                      multiline={true}
                      onChangeText={[Function]}
                      placeholder="Digite aqui as observações do paciente."
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          {
                            "minHeight": 50,
                          },
                          {
                            "flex": 1,
                          },
                        ]
                      }
                      value="Observações sobre o paciente"
                    />
                  </View>
                </View>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={false}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 5,
                    "borderBottomRightRadius": 5,
                    "borderColor": "#1800AE",
                    "borderStyle": "solid",
                    "borderTopLeftRadius": 5,
                    "borderTopRightRadius": 5,
                    "borderWidth": 1,
                    "marginTop": 10,
                    "opacity": 1,
                    "paddingBottom": 10,
                    "paddingLeft": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                    "width": "100%",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#1800AE",
                      "fontSize": 31,
                      "fontWeight": "bold",
                    }
                  }
                  variant="outline"
                >
                  Agendar
                </Text>
              </View>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`SignIn view should render correctly with hour 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#1800AE",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 5,
        "justifyContent": "space-between",
        "paddingBottom": 10,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "gap": 5,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 31,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Criar Agendamento
      </Text>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "gap": 5,
            },
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 5,
              "opacity": 1,
            }
          }
        >
          <BackIconSVG />
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#FFFFFF",
                "fontSize": 27,
              }
            }
          >
            Voltar
          </Text>
        </View>
        <Image
          source={
            {
              "testUri": "../../../src/assets/logo-icon-conexa.png",
            }
          }
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
  <RCTScrollView
    keyboardShouldPersistTaps="always"
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#1800AE",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <RCTSafeAreaView
          style={
            {
              "backgroundColor": "#1800AE",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#DDDEDF",
                "fontSize": 31,
                "fontWeight": "bold",
                "marginTop": 15,
                "textAlign": "center",
              }
            }
          >
            Agendamento para 
            John Doe
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "center",
                "marginTop": 30,
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "gap": 8,
                  "justifyContent": "center",
                  "paddingBottom": 24,
                  "paddingLeft": 24,
                  "paddingRight": 24,
                  "paddingTop": 24,
                  "width": "90%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#5C6265",
                    "fontSize": 31,
                    "fontWeight": "bold",
                    "marginBottom": 20,
                  }
                }
              >
                Dados do Paciente
              </Text>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      Nome do Paciente
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="words"
                      autoCorrect={false}
                      onChangeText={[Function]}
                      placeholder="jose@gmail.com"
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          undefined,
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "marginBottom": 8,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "borderBottomLeftRadius": 5,
                          "borderBottomRightRadius": 5,
                          "borderColor": "#DDDEDF",
                          "borderStyle": "solid",
                          "borderTopLeftRadius": 5,
                          "borderTopRightRadius": 5,
                          "borderWidth": 1,
                          "justifyContent": "center",
                          "paddingBottom": 10,
                          "paddingLeft": 14,
                          "paddingRight": 14,
                          "paddingTop": 10,
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#FFFFFF",
                            "left": 10,
                            "paddingBottom": 0,
                            "paddingLeft": 5,
                            "paddingRight": 5,
                            "paddingTop": 0,
                            "position": "absolute",
                            "top": -10,
                            "zIndex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#5C6265",
                            }
                          }
                        >
                          Data
                        </Text>
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 5,
                            "justifyContent": "center",
                            "width": "100%",
                          }
                        }
                      >
                        <TextInput
                          autoCapitalize="none"
                          onChangeText={[Function]}
                          placeholder="Ex.: 10/12/2023"
                          style={
                            [
                              {
                                "fontSize": 27,
                                "width": "100%",
                              },
                              undefined,
                              {
                                "flex": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "marginBottom": 8,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "borderBottomLeftRadius": 5,
                          "borderBottomRightRadius": 5,
                          "borderColor": "#DDDEDF",
                          "borderStyle": "solid",
                          "borderTopLeftRadius": 5,
                          "borderTopRightRadius": 5,
                          "borderWidth": 1,
                          "justifyContent": "center",
                          "paddingBottom": 10,
                          "paddingLeft": 14,
                          "paddingRight": 14,
                          "paddingTop": 10,
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#FFFFFF",
                            "left": 10,
                            "paddingBottom": 0,
                            "paddingLeft": 5,
                            "paddingRight": 5,
                            "paddingTop": 0,
                            "position": "absolute",
                            "top": -10,
                            "zIndex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#5C6265",
                            }
                          }
                        >
                          Hora
                        </Text>
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 5,
                            "justifyContent": "center",
                            "width": "100%",
                          }
                        }
                      >
                        <TextInput
                          autoCapitalize="none"
                          onChangeText={[Function]}
                          placeholder="Ex.: 12:30"
                          style={
                            [
                              {
                                "fontSize": 27,
                                "width": "100%",
                              },
                              undefined,
                              {
                                "flex": 1,
                              },
                            ]
                          }
                          value="10:10"
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      Observações
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="sentences"
                      autoCorrect={false}
                      multiline={true}
                      onChangeText={[Function]}
                      placeholder="Digite aqui as observações do paciente."
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          {
                            "minHeight": 50,
                          },
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={false}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 5,
                    "borderBottomRightRadius": 5,
                    "borderColor": "#1800AE",
                    "borderStyle": "solid",
                    "borderTopLeftRadius": 5,
                    "borderTopRightRadius": 5,
                    "borderWidth": 1,
                    "marginTop": 10,
                    "opacity": 1,
                    "paddingBottom": 10,
                    "paddingLeft": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                    "width": "100%",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#1800AE",
                      "fontSize": 31,
                      "fontWeight": "bold",
                    }
                  }
                  variant="outline"
                >
                  Agendar
                </Text>
              </View>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`SignIn view should render correctly with patient 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#1800AE",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 5,
        "justifyContent": "space-between",
        "paddingBottom": 10,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 10,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "gap": 5,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 31,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Criar Agendamento
      </Text>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "gap": 5,
            },
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 5,
              "opacity": 1,
            }
          }
        >
          <BackIconSVG />
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#FFFFFF",
                "fontSize": 27,
              }
            }
          >
            Voltar
          </Text>
        </View>
        <Image
          source={
            {
              "testUri": "../../../src/assets/logo-icon-conexa.png",
            }
          }
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
  <RCTScrollView
    keyboardShouldPersistTaps="always"
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#1800AE",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <RCTSafeAreaView
          style={
            {
              "backgroundColor": "#1800AE",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#DDDEDF",
                "fontSize": 31,
                "fontWeight": "bold",
                "marginTop": 15,
                "textAlign": "center",
              }
            }
          >
            Agendamento para 
            John Doe
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "center",
                "marginTop": 30,
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "gap": 8,
                  "justifyContent": "center",
                  "paddingBottom": 24,
                  "paddingLeft": 24,
                  "paddingRight": 24,
                  "paddingTop": 24,
                  "width": "90%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#5C6265",
                    "fontSize": 31,
                    "fontWeight": "bold",
                    "marginBottom": 20,
                  }
                }
              >
                Dados do Paciente
              </Text>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      Nome do Paciente
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="words"
                      autoCorrect={false}
                      onChangeText={[Function]}
                      placeholder="jose@gmail.com"
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          undefined,
                          {
                            "flex": 1,
                          },
                        ]
                      }
                      value="Rilson Costa de Oliveira"
                    />
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 10,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "marginBottom": 8,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "borderBottomLeftRadius": 5,
                          "borderBottomRightRadius": 5,
                          "borderColor": "#DDDEDF",
                          "borderStyle": "solid",
                          "borderTopLeftRadius": 5,
                          "borderTopRightRadius": 5,
                          "borderWidth": 1,
                          "justifyContent": "center",
                          "paddingBottom": 10,
                          "paddingLeft": 14,
                          "paddingRight": 14,
                          "paddingTop": 10,
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#FFFFFF",
                            "left": 10,
                            "paddingBottom": 0,
                            "paddingLeft": 5,
                            "paddingRight": 5,
                            "paddingTop": 0,
                            "position": "absolute",
                            "top": -10,
                            "zIndex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#5C6265",
                            }
                          }
                        >
                          Data
                        </Text>
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 5,
                            "justifyContent": "center",
                            "width": "100%",
                          }
                        }
                      >
                        <TextInput
                          autoCapitalize="none"
                          onChangeText={[Function]}
                          placeholder="Ex.: 10/12/2023"
                          style={
                            [
                              {
                                "fontSize": 27,
                                "width": "100%",
                              },
                              undefined,
                              {
                                "flex": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "marginBottom": 8,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "borderBottomLeftRadius": 5,
                          "borderBottomRightRadius": 5,
                          "borderColor": "#DDDEDF",
                          "borderStyle": "solid",
                          "borderTopLeftRadius": 5,
                          "borderTopRightRadius": 5,
                          "borderWidth": 1,
                          "justifyContent": "center",
                          "paddingBottom": 10,
                          "paddingLeft": 14,
                          "paddingRight": 14,
                          "paddingTop": 10,
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#FFFFFF",
                            "left": 10,
                            "paddingBottom": 0,
                            "paddingLeft": 5,
                            "paddingRight": 5,
                            "paddingTop": 0,
                            "position": "absolute",
                            "top": -10,
                            "zIndex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "color": "#5C6265",
                            }
                          }
                        >
                          Hora
                        </Text>
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 5,
                            "justifyContent": "center",
                            "width": "100%",
                          }
                        }
                      >
                        <TextInput
                          autoCapitalize="none"
                          onChangeText={[Function]}
                          placeholder="Ex.: 12:30"
                          style={
                            [
                              {
                                "fontSize": 27,
                                "width": "100%",
                              },
                              undefined,
                              {
                                "flex": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 5,
                      "borderBottomRightRadius": 5,
                      "borderColor": "#DDDEDF",
                      "borderStyle": "solid",
                      "borderTopLeftRadius": 5,
                      "borderTopRightRadius": 5,
                      "borderWidth": 1,
                      "justifyContent": "center",
                      "paddingBottom": 10,
                      "paddingLeft": 14,
                      "paddingRight": 14,
                      "paddingTop": 10,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "backgroundColor": "#FFFFFF",
                        "left": 10,
                        "paddingBottom": 0,
                        "paddingLeft": 5,
                        "paddingRight": 5,
                        "paddingTop": 0,
                        "position": "absolute",
                        "top": -10,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#5C6265",
                        }
                      }
                    >
                      Observações
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 5,
                        "justifyContent": "center",
                        "width": "100%",
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="sentences"
                      autoCorrect={false}
                      multiline={true}
                      onChangeText={[Function]}
                      placeholder="Digite aqui as observações do paciente."
                      style={
                        [
                          {
                            "fontSize": 27,
                            "width": "100%",
                          },
                          {
                            "minHeight": 50,
                          },
                          {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={false}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderBottomLeftRadius": 5,
                    "borderBottomRightRadius": 5,
                    "borderColor": "#1800AE",
                    "borderStyle": "solid",
                    "borderTopLeftRadius": 5,
                    "borderTopRightRadius": 5,
                    "borderWidth": 1,
                    "marginTop": 10,
                    "opacity": 1,
                    "paddingBottom": 10,
                    "paddingLeft": 10,
                    "paddingRight": 10,
                    "paddingTop": 10,
                    "width": "100%",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#1800AE",
                      "fontSize": 31,
                      "fontWeight": "bold",
                    }
                  }
                  variant="outline"
                >
                  Agendar
                </Text>
              </View>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
